# Seminario

./: CMakeLists.txt  README.md  cliente.c  cliente.h  livro.c  livro.h  main.c  validacao.c  validacao.h
